--- a/.xmobarrc
+++ b/.xmobarrc
@@ -9,7 +9,7 @@ Config {
    -- layout
    , sepChar =  "%"   -- delineator between plugin names and straight text
    , alignSep = "}{"  -- separator between left-right alignment
-   , template = " %multicpu%  |  %coretemp%  |  %memory%  |  %dynnetwork% }{ %date% || %kbd% "
+   , template = " %multicpu%  |  %coretemp%  |  %memory%  |  %dynnetwork% | %StdinReader%}{ %date% || %kbd% "
 
    -- general behavior
    , lowerOnStart =     True    -- send to bottom of window stack on start
@@ -20,15 +20,6 @@ Config {
    , persistent =       True    -- enable/disable hiding (True = disabled)
 
    -- plugins
-   --   Numbers can be automatically colored according to their value. xmobar
-   --   decides color based on a three-tier/two-cutoff system, controlled by
-   --   command options:
-   --     --Low sets the low cutoff
-   --     --High sets the high cutoff
-   --
-   --     --low sets the color below --Low cutoff
-   --     --normal sets the color between --Low and --High cutoffs
-   --     --High sets the color above --High cutoff
    --
    --   The --template option controls how the plugin is displayed. Text
    --   color can be set by enclosing in <fc></fc> tags. For more details
@@ -61,7 +52,7 @@ Config {
                              , "--normal"   , "#fb5"
                              , "--high"     , "#f66"
                              ] 50
-                          
+
         -- memory usage monitor
         , Run Memory         [ "--template" ,"Mem: <usedratio>%"
                              , "--Low"      , "20"        -- units: %
@@ -80,5 +71,7 @@ Config {
                              , ("ch"    , "<fc=#d82222>CH</fc>")
                              , ("ru"    , "<fc=#3e7de0>RU</fc>")
                              ] 
+
+        , Run StdinReader
         ]
    }
