--- a/.xmobarrc
+++ b/.xmobarrc
@@ -9,7 +9,7 @@ Config {
    -- layout
    , sepChar =  "%"   -- delineator between plugin names and straight text
    , alignSep = "}{"  -- separator between left-right alignment
-   , template = " %multicpu%  |  %coretemp%  |  %memory%  |  %dynnetwork% | %StdinReader%}{ %date% || %kbd% "
+   , template = " %multicpu%  %coretemp%  %memory%  |  %dynnetwork%  |  %StdinReader%}{ %date% || %kbd% "
 
    -- general behavior
    , lowerOnStart =     True    -- send to bottom of window stack on start
@@ -36,7 +36,7 @@ Config {
                              ] 10
 
         -- cpu activity monitor
-        , Run MultiCpu       [ "--template" , "Cpu: <total0>/<total1>/<total2>/<total3>/<total4>/<total5>/<total6>/<total7>%"
+        , Run MultiCpu       [ "--template" , "<icon=.icons/cpu.xbm/> <total0>/<total1>/<total2>/<total3>/<total4>/<total5>/<total6>/<total7>%"
                              , "--Low"      , "50"         -- units: %
                              , "--High"     , "85"         -- units: %
                              , "--low"      , "#6f6"
@@ -45,7 +45,7 @@ Config {
                              ] 10
 
         -- cpu core temperature monitor
-        , Run CoreTemp       [ "--template" , "Temp: <core0>/<core1>/<core2>/<core3>°C"
+        , Run CoreTemp       [ "--template" , "<icon=.icons/temp1.xbm/> <core0>/<core1>/<core2>/<core3>°C"
                              , "--Low"      , "70"        -- units: °C
                              , "--High"     , "80"        -- units: °C
                              , "--low"      , "#6f6"
@@ -54,7 +54,7 @@ Config {
                              ] 50
 
         -- memory usage monitor
-        , Run Memory         [ "--template" ,"Mem: <usedratio>%"
+        , Run Memory         [ "--template" ,"<icon=.icons/mem.xbm/> <usedratio>%"
                              , "--Low"      , "20"        -- units: %
                              , "--High"     , "90"        -- units: %
                              , "--low"      , "#6f6"
