--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -1,4 +1,4 @@
-rofi.combi-modi:    window,drun,ssh
+rofi.combi-modi:    window,drun
 rofi.font:          hack 10
 rofi.modi:          combi
 rofi.matching:      fuzzy
