sublime keybindings / move stalonetray / some input stuff

--- a/.xmobarrc
+++ b/.xmobarrc
@@ -13,7 +13,7 @@ Config {
    -- layout
    , sepChar =  "%"   -- delineator between plugin names and straight text
    , alignSep = "}{"  -- separator between left-right alignment
-   , template = " %battery%  <action=`urxvt -e alsamixer`><icon=src/Dotfiles/Arch/.xmonad/.icons/vol1.xbm/> %volume%</action>} %UnsafeStdinReader% { %date% || %kbd%    "
+   , template = " %battery%  <action=`urxvt -e alsamixer`><icon=src/Dotfiles/Arch/.xmonad/.icons/vol1.xbm/> %volume%</action>} %UnsafeStdinReader% { || %date% || %kbd% "
 
    -- general behavior
    , lowerOnStart =     True    -- send to bottom of window stack on start
