--- a/.config/sway/config
+++ b/.config/sway/config
@@ -138,7 +138,7 @@ bindsym $mod+KP_1 input * xkb_switch_layout 0
 bindsym $mod+KP_2 input * xkb_switch_layout 1
 bindsym $mod+KP_3 input * xkb_switch_layout 2
 
-input * repeat_delay 150
+input * repeat_delay 200
 input * repeat_rate 60
 
 input * xkb_numlock enable
@@ -167,7 +167,7 @@ input * xkb_numlock enable
     bindsym $mod+Shift+c reload
 
     # Exit sway (logs you out of your Wayland session)
-    bindsym $mod+Shift+e exec swaynag -t custom -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
+    bindsym $mod+Shift+e exec swaynag -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
 #
 # Moving around:
 #
@@ -196,28 +196,28 @@ input * xkb_numlock enable
 # Workspaces:
 #
     # Switch to workspace
-    bindsym $mod+Mod1+KP_1 workspace number 1
-    bindsym $mod+Mod1+KP_2 workspace number 2
-    bindsym $mod+Mod1+KP_3 workspace number 3
-    bindsym $mod+Mod1+KP_4 workspace number 4
-    bindsym $mod+Mod1+KP_5 workspace number 5
-    bindsym $mod+Mod1+KP_6 workspace number 6
-    bindsym $mod+Mod1+KP_7 workspace number 7
-    bindsym $mod+Mod1+KP_8 workspace number 8
-    bindsym $mod+Mod1+KP_9 workspace number 9
-    bindsym $mod+Mod1+KP_0 workspace number 10
+    bindsym Mod1+KP_1 workspace number 1
+    bindsym Mod1+KP_2 workspace number 2
+    bindsym Mod1+KP_3 workspace number 3
+    bindsym Mod1+KP_4 workspace number 4
+    bindsym Mod1+KP_5 workspace number 5
+    bindsym Mod1+KP_6 workspace number 6
+    bindsym Mod1+KP_7 workspace number 7
+    bindsym Mod1+KP_8 workspace number 8
+    bindsym Mod1+KP_9 workspace number 9
+    bindsym Mod1+KP_0 workspace number 10
 
     # Move focused container to workspace
-    bindsym $mod+Shift+KP_End    move window to workspace number 1
-    bindsym $mod+Shift+KP_Down   move window to workspace number 2
-    bindsym $mod+Shift+KP_Next   move window to workspace number 3
-    bindsym $mod+Shift+KP_Left   move window to workspace number 4
-    bindsym $mod+Shift+KP_Begin  move window to workspace number 5
-    bindsym $mod+Shift+KP_Right  move window to workspace number 6
-    bindsym $mod+Shift+KP_Home   move window to workspace number 7
-    bindsym $mod+Shift+KP_Up     move window to workspace number 8
-    bindsym $mod+Shift+KP_Prior  move window to workspace number 9
-    bindsym $mod+Shift+KP_Insert move window to workspace number 10
+    bindsym Mod1+Shift+KP_End    move window to workspace number 1;  workspace number 1
+    bindsym Mod1+Shift+KP_Down   move window to workspace number 2;  workspace number 2
+    bindsym Mod1+Shift+KP_Next   move window to workspace number 3;  workspace number 3
+    bindsym Mod1+Shift+KP_Left   move window to workspace number 4;  workspace number 4
+    bindsym Mod1+Shift+KP_Begin  move window to workspace number 5;  workspace number 5
+    bindsym Mod1+Shift+KP_Right  move window to workspace number 6;  workspace number 6
+    bindsym Mod1+Shift+KP_Home   move window to workspace number 7;  workspace number 7
+    bindsym Mod1+Shift+KP_Up     move window to workspace number 8;  workspace number 8
+    bindsym Mod1+Shift+KP_Prior  move window to workspace number 9;  workspace number 9
+    bindsym Mod1+Shift+KP_Insert move window to workspace number 10; workspace number 10
 
     bindsym $mod+Ctrl+$right move workspace to output right
     bindsym $mod+Ctrl+Right move workspace to output right
