--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -1,3 +1,5 @@
+############################ WEBSTUFF ########################################
+
 [[language]]
 name = "html"
 formatter = { command = 'npx', args = ["prettier", "--parser", "html"] }
@@ -26,3 +28,26 @@ formatter = { command = 'npx', args = ["prettier", "--parser", "typescript"] }
 name = "jsx"
 formatter = { command = 'npx', args = ["prettier", "--parser", "typescript"] }
 # auto-format = true
+
+############################ PYTHON ########################################
+
+[[language]]
+name = "python"
+language-servers = ["pylsp", "basedpyright", "ruff"]
+auto-format = false
+
+[language-server.pylsp.config.pylsp]
+plugins.pyls_mypy.enabled = true
+plugins.pyls_mypy.live_mode = true
+
+[language-server.rust-analyzer]
+config = { cargo = { allFeatures = true } }
+
+############################ TYPST ########################################
+
+[language-server.tinymist]
+command = "tinymist"
+
+[[language]]
+name = "typst"
+language-servers = ["tinymist"]
